--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "firebase": "^8.6.5",
     "grade-js": "^1.0.10",
     "node-sass": "^4.14.1",
-    "react-flip-move": "^3.0.4",
-    "react-redux": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
